--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
+  "engines": {
+    "node": "10.10.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
